# remora-demo

./: .gitignore  .tmuxp.yaml  BLUE_SKY_V2_REWRITE_GUIDE.md  DEMO_ARCHITECTURE.md  DEMO_ARCHITECTURE_OVERVIEW.md  DEMO_FEATURE_ADDITION.md  DESIGN_DOC.md  FRONTEND_REFACTOR_GUIDE.md  HUB_FRONTEND_SEPARATION_GUIDE.md  MVP_DEMO_REFACTOR_PLAN.md  NEW_NODE_CONCEPT.md  NVIM_DEMO_CONCEPT.md  README.md  REFACTOR_ANALYSIS.md  REMORA_CST_DEMO_ANALYSIS.md  REMORA_SIMPLIFICATION_IDEAS.md  REMROA_DEMO_FEATURE_REFACTOR.md  STARIO_MVP_DEMO_CONCEPT.md  STARIO_MVP_DEMO_PLAN.md  SWARM_ARCHITECTURE.md  UI_GRAPH.md  WORKSPACE_BASE_HUB_REFACTOR.md  devenv.nix  devenv.yaml  pyproject.toml
.context/cairn/: HOW_TO_CREATE_A_GRAIL_PYM_SCRIPT.md  pyproject.toml
.context/cairn/scripts/: demo_cairn_library.py
.context/cairn/tests/cairn/: conftest.py  test_agent_tools.py  test_cli.py  test_constants.py  test_error_formatting.py  test_exceptions.py  test_lifecycle.py  test_lifecycle_locking.py  test_orchestrator.py  test_orchestrator_phases.py  test_performance.py  test_plugin_providers.py  test_providers.py  test_queue_limits.py  test_regex_utils.py  test_resource_cleanup_integration.py  test_resource_limits.py  test_retry_utils.py  test_signal_events.py  test_type_checking.py  test_types.py  test_watcher.py  test_workspace.py  test_workspace_cache.py  test_workspace_manager.py
.context/fsdantic/: pyproject.toml
.context/remora/: HOW_TO_USE_REMORA.md  README.md  REMORA_UI_DEMO_IDEAS.md  justfile  pyproject.toml  remora.yaml  remora.yaml.example
.context/remora/agents/apply_fix/: check.json  externals.json  inputs.json  monty_code.py  stubs.pyi
.context/remora/agents/article_section/: bundle.yaml
.context/remora/agents/article_summary/: bundle.yaml
.context/remora/agents/chat/: bundle.yaml
.context/remora/agents/docstring/: bundle.yaml
.context/remora/agents/docstring_style/: check.json  externals.json  monty_code.py  stubs.pyi
.context/remora/agents/harness/: bundle.yaml  harness_subagent.yaml.old
.context/remora/agents/lint/: bundle.yaml  lint_subagent.yaml.old
.context/remora/agents/pytest_config/: check.json  monty_code.py
.context/remora/agents/read_current_docstring/: check.json  monty_code.py
.context/remora/bootstrap/: PHASE2_BOOTSTRAP_CONCEPT.md  PHASE2_BOOTSTRAP_REVIEW.md  PHASE2_V2_BOOTSTRAP_CONCEPT.md  PHASE2_V3_BOOTSTRAP_CONCEPT.md  PHASE2_V4_BOOTSTRAP_CONCEPT.md  PHASE2_V5_BOOTSTRAP_CONCEPT.md  PHASE2_V6_BOOTSTRAP_CONCEPT.md  PRIMITIVES.md  PRIMITIVES_WALKTHROUGH.md  README.md  pyproject.toml
.context/remora/browser_demo/: pyproject.toml
.context/remora/demo/: DEMO_DEVELOPMENT_LOG.md  __init__.py  api_demo.py  cli.py  config.py  demo_output.txt  engine.py  events.py  models.py  parser.py  summarizer.py  tui.py
.context/remora/docs/: API_REFERENCE.md  ARCHITECTURE.md  CONCEPT.md  CONFIGURATION.md  Dockerfile.ollama.quickstart  EventBased_Concept.md  HOW_TO_CREATE_A_GRAIL_PYM_SCRIPT.md  INSTALLATION.md  LLM_REFERENCE.md  REMORA_UI_API.md  SPEC.md  TESTING_GUIDELINES.md  TROUBLESHOOTING.md  architecture.mmd  overview.md
.context/remora/e2e/: __init__.py  companion_keys.py  harness.py  keys.py  run.py
.context/remora/examples/: CONTINUOUS_HEALTH_CONCEPT.md  FEATURE_ASSEMBLY_LINE_CONCEPT.md  LINKED_EMBEDDINGS_SWARM_CONCEPT.md
.context/remora/remora_demo/: __init__.py  launch.sh
.context/remora/scripts/: __init__.py  ast_summary_demo.py  check_arch_slo.py  generate_package_dependency_graph.py  jsonl_to_readable.py  migrate_bundles.py  remora_dashboard.py  remora_demo.py  remora_tui.py  scan_repo.py  start_lsp.sh  stress_vllm.py  test_grammar.py  validate_agents.py
.context/remora/server/: .env.example  Dockerfile  Dockerfile.agents  Dockerfile.tailscale  README.md  SERVER_DEV_GUIDE.md  adapter_manager.py  agents_server.py  docker-compose.yml  entrypoint.sh  test_connection.py  tool_chat_template_functiongemma.jinja  update.sh
.context/remora/tests/: helpers.py  test_config.py  test_context_manager.py  test_discovery.py  test_tool_script_fuzzing.py
backend/: devenv.nix  pyproject.toml  remora.yaml
backend/.devenv/: devenv.json  flake.json  input-paths.txt  load-exports  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
backend/.devenv/gc/: shell-2-link  shell-3-link
backend/agents/: README.md
backend/agents/common_tools/: update_file.pym
backend/agents/refactor_class/: bundle.yaml
backend/agents/refactor_file/: bundle.yaml
backend/agents/refactor_function/: bundle.yaml
backend/agents/refactor_method/: bundle.yaml
backend/backend_app/: __init__.py  chat_service.py  cli.py  refactor_cli.py  refactor_service.py
frontend/: AGENTS.md  EVENT_BASED_DEMO_PLAN.md  EventBased_Demo.md  __init__.py  devenv.nix  launch.sh  main.py  pyproject.toml  refactor_main.py
frontend/.devenv/: input-paths.txt  load-exports  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
frontend/.devenv/gc/: shell-2-link  shell-3-link  shell-4-link
frontend/.scratch/: CRITICAL_RULES.md  REPO_RULES.md
frontend/.scratch/skills/: remora.md  stario-api-notes.md  stario-datastar.md
frontend/app/: __init__.py  client.py  handlers.py  state.py  views.py
frontend/graph/: __main__.py  app.py  bridge.py  css.py  state.py  svg.py
frontend/graph/views/: __init__.py  event_stream.py  graph.py  shell.py  sidebar.py
frontend/refactor_app/: __init__.py  client.py  handlers.py  state.py  views.py
frontend/remora_demo/: __init__.py  __main__.py  mock_llm.py
frontend/remora_demo/project/: .nvim.lua  remora.yaml
frontend/tests/: test_app.py  test_bridge.py  test_cross_process.py  test_css.py  test_entry_points.py  test_golden_path.py  test_integration_graph.py  test_layout.py  test_mock_llm.py  test_svg.py  test_timeline_state.py  test_timeline_svg.py  test_timeline_views.py  test_views.py
frontend/tests/e2e/: conftest.py  test_graph_e2e.py  test_timeline_e2e.py
frontend/timeline/: __init__.py  css.py  state.py  svg.py  views.py
(+1618 files in other folders)
