[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remora-ui"
version = "0.1.0"
description = "Browser-based web UI for the Remora agent swarm"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "starlette>=0.40",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
]

[project.scripts]
remora-ui = "remora_ui.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/remora_ui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
