[project]
name = "remora-demo-frontend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "stario",
    "httpx>=0.27",
]

[project.scripts]
start-frontend = "main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
py-modules = ["main"]
