[project]
name = "remora-demo-frontend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "stario",
    "httpx>=0.27",
]

[project.scripts]
start-frontend = "main:cli"
start-refactor-frontend = "refactor_main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "refactor_app"]
py-modules = ["main", "refactor_main"]
