[project]
name = "remora-demo-frontend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "stario",
    "httpx>=0.27",
]

[project.scripts]
remora-graph = "graph.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
e2e = [
    "pytest>=8.0",
    "pytest-playwright>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["graph", "graph.views", "remora_demo", "timeline"]
