[project]
name = "cairn"
version = "0.1.0"
description = "Cairn orchestrator runtime for sandboxed code execution on fsdantic workspaces"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Bullish Design" }]
dependencies = [
    "agentfs-sdk>=0.6.0",
    "fsdantic>=0.3.0",
    "grail>=2.0.0",
    "pydantic>=2.0.0",
    "watchfiles>=0.20.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]


[project.scripts]
cairn = "cairn.cli.cli:main"
cairn-cli = "cairn.cli.typer_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "benchmark: mark test as a performance benchmark",
    "integration: mark test as integration tests",
    "slow: mark test as slow (deselect with '-m \"not slow\"')",
]
addopts = [
    "--strict-markers",
    "--verbose",
]
pythonpath = ["."]

[tool.coverage.run]
source = ["cairn"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.uv.sources]
fsdantic = { git = "https://github.com/Bullish-Design/fsdantic.git" }
grail = { git = "https://github.com/Bullish-Design/grail.git" }

[tool.uv]
prerelease = "allow"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "stubs"
files = ["src/cairn"]

[tool.hatch.build.targets.wheel]
packages = ["src/cairn"]
include = ["src/cairn/py.typed", "stubs/**"]

[tool.hatch.build.targets.sdist]
include = ["src/cairn/py.typed", "stubs/**"]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
