[project]
name = "fsdantic"
version = "0.3.0"
description = "Type-safe Pydantic models and query interface for AgentFS SDK"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" },
]

dependencies = [
    "agentfs-sdk>=0.6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
]

#[project.urls]
#homepage = "https://github.com/Bullish-Design/template-py"
#repository = "https://github.com/Bullish-Design/template-py.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell hatch which package to ship (your code lives in src/template_py)
packages = ["src/fsdantic"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
#  "SPEC.md",
#  "docs",
  "tests",
  "pyproject.toml",
]

[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"


